Changed alignment of pages. Fixed about box CSS.

--- a/assets/foundation.css
+++ b/assets/foundation.css
@@ -61,7 +61,7 @@ body {
   background: #fff;
   color: #222222;
   cursor: auto;
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: "Open Sans", Helvetica, Roboto, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   line-height: 1.5;
